// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrillScreen — snapshots renders drill sections with DARK theme 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "padding": 16,
      "paddingBottom": 40,
    }
  }
  data={
    [
      {
        "data": [
          {
            "category": "opening",
            "description": "After 1.e4 e5 2.Nf3 Nc6 3.Bc4 — play as Black",
            "id": "italian_game",
            "name": "Italian Game",
            "startFen": "r1bqkbnr/pppp1ppp/2n5/4p3/2B1P3/5N2/PPPP1PPP/RNBQK2R b KQkq - 3 3",
            "targetColor": "b",
          },
          {
            "category": "opening",
            "description": "After 1.e4 c5 2.Nf3 d6 3.d4 cxd4 4.Nxd4 Nf6 5.Nc3 — play as Black",
            "id": "sicilian_najdorf",
            "name": "Sicilian — Najdorf",
            "startFen": "rnbqkb1r/pp2pppp/3p1n2/8/3NP3/2N5/PPP2PPP/R1BQKB1R b KQkq - 1 5",
            "targetColor": "b",
          },
          {
            "category": "opening",
            "description": "After 1.e4 e6 2.d4 d5 3.e5 — play as Black",
            "id": "french_advance",
            "name": "French — Advance",
            "startFen": "rnbqkbnr/ppp2ppp/4p3/3pP3/3P4/8/PPP2PPP/RNBQKBNR b KQkq - 0 3",
            "targetColor": "b",
          },
          {
            "category": "opening",
            "description": "After 1.d4 d5 2.c4 dxc4 — play as White",
            "id": "qga",
            "name": "Queen's Gambit Accepted",
            "startFen": "rnbqkbnr/ppp1pppp/8/8/2pP4/8/PP2PPPP/RNBQKBNR w KQkq - 0 3",
            "targetColor": "w",
          },
          {
            "category": "opening",
            "description": "After 1.d4 Nf6 2.c4 g6 3.Nc3 Bg7 4.e4 d6 5.Nf3 — play as Black",
            "id": "kings_indian",
            "name": "King's Indian — Classical",
            "startFen": "rnbqk2r/ppp1ppbp/3p1np1/8/2PPP3/2N2N2/PP3PPP/R1BQKB1R b KQkq - 1 5",
            "targetColor": "b",
          },
        ],
        "title": "♟ Opening Drills",
      },
      {
        "data": [
          {
            "category": "endgame",
            "description": "Push the pawn to promotion using king opposition. White to move.",
            "id": "kg_vs_kp",
            "name": "King + Pawn vs King",
            "startFen": "8/8/8/4k3/4P3/4K3/8/8 w - - 0 1",
            "targetColor": "w",
          },
          {
            "category": "endgame",
            "description": "Classic rook-and-pawn technique: build a bridge. White to win.",
            "id": "lucena",
            "name": "Lucena Position",
            "startFen": "1K1k4/1P6/8/8/8/8/r7/2R5 w - - 0 1",
            "targetColor": "w",
          },
          {
            "category": "endgame",
            "description": "Hold the draw from behind with the rook. Black to move.",
            "id": "philidor",
            "name": "Philidor Defence (Rook)",
            "startFen": "4k3/8/4K3/4P3/8/8/8/3r3R b - - 0 1",
            "targetColor": "b",
          },
          {
            "category": "endgame",
            "description": "Stop the pawn with your queen before it promotes. White to move.",
            "id": "queen_vs_pawn",
            "name": "Queen vs Advanced Pawn",
            "startFen": "8/8/8/8/8/2Q5/1p6/1K1k4 w - - 0 1",
            "targetColor": "w",
          },
          {
            "category": "endgame",
            "description": "Use king opposition to escort the pawn home. White to move.",
            "id": "opposition",
            "name": "Opposition & Key Squares",
            "startFen": "8/8/3k4/8/3K4/8/3P4/8 w - - 0 1",
            "targetColor": "w",
          },
        ],
        "title": "♔ Endgame Drills",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={
    [
      0,
      7,
    ]
  }
  style={
    {
      "backgroundColor": "#16213e",
      "flex": 1,
    }
  }
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          {
            "color": "#a0aec0",
            "fontSize": 15,
            "fontWeight": "bold",
            "letterSpacing": 1,
            "paddingTop": 20,
            "paddingVertical": 12,
            "textTransform": "uppercase",
          }
        }
      >
        ♟ Opening Drills
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#0f3460",
            "borderRadius": 14,
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 6,
            }
          }
        >
          <Text
            style={
              {
                "color": "#e2e8f0",
                "flex": 1,
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            Italian Game
          </Text>
          <Text
            style={
              {
                "color": "#a0aec0",
                "fontSize": 12,
                "marginLeft": 8,
              }
            }
          >
            ⬛ Black
          </Text>
        </View>
        <Text
          style={
            {
              "color": "#a0aec0",
              "fontSize": 13,
              "lineHeight": 18,
              "marginBottom": 10,
            }
          }
        >
          After 1.e4 e5 2.Nf3 Nc6 3.Bc4 — play as Black
        </Text>
        <Text
          style={
            {
              "color": "#4299e1",
              "fontSize": 12,
              "fontWeight": "600",
            }
          }
        >
          Tap to start →
        </Text>
      </View>
      <View
        style={
          {
            "height": 10,
          }
        }
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#0f3460",
            "borderRadius": 14,
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 6,
            }
          }
        >
          <Text
            style={
              {
                "color": "#e2e8f0",
                "flex": 1,
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            Sicilian — Najdorf
          </Text>
          <Text
            style={
              {
                "color": "#a0aec0",
                "fontSize": 12,
                "marginLeft": 8,
              }
            }
          >
            ⬛ Black
          </Text>
        </View>
        <Text
          style={
            {
              "color": "#a0aec0",
              "fontSize": 13,
              "lineHeight": 18,
              "marginBottom": 10,
            }
          }
        >
          After 1.e4 c5 2.Nf3 d6 3.d4 cxd4 4.Nxd4 Nf6 5.Nc3 — play as Black
        </Text>
        <Text
          style={
            {
              "color": "#4299e1",
              "fontSize": 12,
              "fontWeight": "600",
            }
          }
        >
          Tap to start →
        </Text>
      </View>
      <View
        style={
          {
            "height": 10,
          }
        }
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#0f3460",
            "borderRadius": 14,
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 6,
            }
          }
        >
          <Text
            style={
              {
                "color": "#e2e8f0",
                "flex": 1,
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            French — Advance
          </Text>
          <Text
            style={
              {
                "color": "#a0aec0",
                "fontSize": 12,
                "marginLeft": 8,
              }
            }
          >
            ⬛ Black
          </Text>
        </View>
        <Text
          style={
            {
              "color": "#a0aec0",
              "fontSize": 13,
              "lineHeight": 18,
              "marginBottom": 10,
            }
          }
        >
          After 1.e4 e6 2.d4 d5 3.e5 — play as Black
        </Text>
        <Text
          style={
            {
              "color": "#4299e1",
              "fontSize": 12,
              "fontWeight": "600",
            }
          }
        >
          Tap to start →
        </Text>
      </View>
      <View
        style={
          {
            "height": 10,
          }
        }
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#0f3460",
            "borderRadius": 14,
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 6,
            }
          }
        >
          <Text
            style={
              {
                "color": "#e2e8f0",
                "flex": 1,
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            Queen's Gambit Accepted
          </Text>
          <Text
            style={
              {
                "color": "#a0aec0",
                "fontSize": 12,
                "marginLeft": 8,
              }
            }
          >
            ⬜ White
          </Text>
        </View>
        <Text
          style={
            {
              "color": "#a0aec0",
              "fontSize": 13,
              "lineHeight": 18,
              "marginBottom": 10,
            }
          }
        >
          After 1.d4 d5 2.c4 dxc4 — play as White
        </Text>
        <Text
          style={
            {
              "color": "#4299e1",
              "fontSize": 12,
              "fontWeight": "600",
            }
          }
        >
          Tap to start →
        </Text>
      </View>
      <View
        style={
          {
            "height": 10,
          }
        }
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#0f3460",
            "borderRadius": 14,
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 6,
            }
          }
        >
          <Text
            style={
              {
                "color": "#e2e8f0",
                "flex": 1,
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            King's Indian — Classical
          </Text>
          <Text
            style={
              {
                "color": "#a0aec0",
                "fontSize": 12,
                "marginLeft": 8,
              }
            }
          >
            ⬛ Black
          </Text>
        </View>
        <Text
          style={
            {
              "color": "#a0aec0",
              "fontSize": 13,
              "lineHeight": 18,
              "marginBottom": 10,
            }
          }
        >
          After 1.d4 Nf6 2.c4 g6 3.Nc3 Bg7 4.e4 d6 5.Nf3 — play as Black
        </Text>
        <Text
          style={
            {
              "color": "#4299e1",
              "fontSize": 12,
              "fontWeight": "600",
            }
          }
        >
          Tap to start →
        </Text>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          {
            "color": "#a0aec0",
            "fontSize": 15,
            "fontWeight": "bold",
            "letterSpacing": 1,
            "paddingTop": 20,
            "paddingVertical": 12,
            "textTransform": "uppercase",
          }
        }
      >
        ♔ Endgame Drills
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#0f3460",
            "borderRadius": 14,
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 6,
            }
          }
        >
          <Text
            style={
              {
                "color": "#e2e8f0",
                "flex": 1,
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            King + Pawn vs King
          </Text>
          <Text
            style={
              {
                "color": "#a0aec0",
                "fontSize": 12,
                "marginLeft": 8,
              }
            }
          >
            ⬜ White
          </Text>
        </View>
        <Text
          style={
            {
              "color": "#a0aec0",
              "fontSize": 13,
              "lineHeight": 18,
              "marginBottom": 10,
            }
          }
        >
          Push the pawn to promotion using king opposition. White to move.
        </Text>
        <Text
          style={
            {
              "color": "#4299e1",
              "fontSize": 12,
              "fontWeight": "600",
            }
          }
        >
          Tap to start →
        </Text>
      </View>
      <View
        style={
          {
            "height": 10,
          }
        }
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#0f3460",
            "borderRadius": 14,
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 6,
            }
          }
        >
          <Text
            style={
              {
                "color": "#e2e8f0",
                "flex": 1,
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            Lucena Position
          </Text>
          <Text
            style={
              {
                "color": "#a0aec0",
                "fontSize": 12,
                "marginLeft": 8,
              }
            }
          >
            ⬜ White
          </Text>
        </View>
        <Text
          style={
            {
              "color": "#a0aec0",
              "fontSize": 13,
              "lineHeight": 18,
              "marginBottom": 10,
            }
          }
        >
          Classic rook-and-pawn technique: build a bridge. White to win.
        </Text>
        <Text
          style={
            {
              "color": "#4299e1",
              "fontSize": 12,
              "fontWeight": "600",
            }
          }
        >
          Tap to start →
        </Text>
      </View>
      <View
        style={
          {
            "height": 10,
          }
        }
      />
    </View>
    <View
      style={
        {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`LobbyScreen — snapshots idle phase (no active connection) matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#16213e",
      "flex": 1,
      "padding": 24,
    }
  }
>
  <Text
    style={
      {
        "color": "#e2e8f0",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 8,
      }
    }
  >
    Multiplayer
  </Text>
  <Text
    style={
      {
        "color": "#a0aec0",
        "fontSize": 13,
        "marginBottom": 32,
      }
    }
  >
    Both devices must be on the same WiFi network.
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#4299e1",
        "borderRadius": 12,
        "marginBottom": 24,
        "opacity": 1,
        "padding": 18,
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      🏠 Host a Game
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#a0aec0",
        "marginBottom": 24,
        "textAlign": "center",
      }
    }
  >
    — or —
  </Text>
  <Text
    style={
      {
        "color": "#a0aec0",
        "marginBottom": 8,
      }
    }
  >
    Join with host IP address
  </Text>
  <TextInput
    autoCapitalize="none"
    keyboardType="numbers-and-punctuation"
    maxLength={21}
    onChangeText={[Function]}
    placeholder="e.g. 192.168.1.5"
    placeholderTextColor="#666"
    style={
      {
        "backgroundColor": "#0f3460",
        "borderRadius": 10,
        "color": "#e2e8f0",
        "fontSize": 18,
        "letterSpacing": 2,
        "marginBottom": 16,
        "padding": 14,
        "textAlign": "center",
      }
    }
    value=""
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#48bb78",
        "borderRadius": 12,
        "opacity": 0.4,
        "padding": 16,
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      Join Game
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#a0aec0",
        "marginBottom": 24,
        "textAlign": "center",
      }
    }
  >
    — or —
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#0f3460",
        "borderRadius": 12,
        "marginTop": 8,
        "opacity": 0.4,
        "padding": 16,
      }
    }
  >
    <Text
      style={
        {
          "color": "#a0aec0",
          "fontSize": 15,
        }
      }
    >
      👁 Watch (spectate)
    </Text>
  </View>
</View>
`;

exports[`OnboardingScreen — snapshots step 0 (welcome slide) matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#16213e",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    horizontal={true}
    pagingEnabled={true}
    scrollEnabled={false}
    showsHorizontalScrollIndicator={false}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "padding": 32,
            "width": 750,
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 72,
              "marginBottom": 20,
            }
          }
        >
          ♟
        </Text>
        <Text
          style={
            {
              "color": "#e2e8f0",
              "fontSize": 26,
              "fontWeight": "bold",
              "marginBottom": 16,
              "textAlign": "center",
            }
          }
        >
          BoardSight Chess
        </Text>
        <Text
          style={
            {
              "color": "#a0aec0",
              "fontSize": 16,
              "lineHeight": 24,
              "marginBottom": 28,
              "textAlign": "center",
            }
          }
        >
          Point your phone camera at any chessboard to automatically record moves, run a clock, and get post-game analysis.
        </Text>
        <View
          style={
            {
              "alignSelf": "stretch",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginBottom": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#4299e1",
                  "fontSize": 18,
                  "lineHeight": 22,
                  "marginRight": 10,
                }
              }
            >
              •
            </Text>
            <Text
              style={
                {
                  "color": "#e2e8f0",
                  "flex": 1,
                  "fontSize": 15,
                  "lineHeight": 22,
                }
              }
            >
              Auto-detect moves via camera
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginBottom": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#4299e1",
                  "fontSize": 18,
                  "lineHeight": 22,
                  "marginRight": 10,
                }
              }
            >
              •
            </Text>
            <Text
              style={
                {
                  "color": "#e2e8f0",
                  "flex": 1,
                  "fontSize": 15,
                  "lineHeight": 22,
                }
              }
            >
              Built-in chess clock
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginBottom": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#4299e1",
                  "fontSize": 18,
                  "lineHeight": 22,
                  "marginRight": 10,
                }
              }
            >
              •
            </Text>
            <Text
              style={
                {
                  "color": "#e2e8f0",
                  "flex": 1,
                  "fontSize": 15,
                  "lineHeight": 22,
                }
              }
            >
              Stockfish post-game analysis
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginBottom": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#4299e1",
                  "fontSize": 18,
                  "lineHeight": 22,
                  "marginRight": 10,
                }
              }
            >
              •
            </Text>
            <Text
              style={
                {
                  "color": "#e2e8f0",
                  "flex": 1,
                  "fontSize": 15,
                  "lineHeight": 22,
                }
              }
            >
              Play vs bots or friends over WiFi
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "padding": 32,
            "width": 750,
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 72,
              "marginBottom": 20,
            }
          }
        >
          📷
        </Text>
        <Text
          style={
            {
              "color": "#e2e8f0",
              "fontSize": 26,
              "fontWeight": "bold",
              "marginBottom": 16,
              "textAlign": "center",
            }
          }
        >
          Camera Access
        </Text>
        <Text
          style={
            {
              "color": "#a0aec0",
              "fontSize": 16,
              "lineHeight": 24,
              "marginBottom": 28,
              "textAlign": "center",
            }
          }
        >
          BoardSight needs your camera to watch the board. Your video never leaves your device — all CV runs on-device.
        </Text>
        <View
          style={
            {
              "marginTop": 16,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "padding": 32,
            "width": 750,
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 72,
              "marginBottom": 20,
            }
          }
        >
          💡
        </Text>
        <Text
          style={
            {
              "color": "#e2e8f0",
              "fontSize": 26,
              "fontWeight": "bold",
              "marginBottom": 16,
              "textAlign": "center",
            }
          }
        >
          Positioning Tips
        </Text>
        <Text
          style={
            {
              "color": "#a0aec0",
              "fontSize": 16,
              "lineHeight": 24,
              "marginBottom": 28,
              "textAlign": "center",
            }
          }
        >
          For best accuracy, follow these guidelines when setting up your board:
        </Text>
        <View
          style={
            {
              "alignSelf": "stretch",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginBottom": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#4299e1",
                  "fontSize": 18,
                  "lineHeight": 22,
                  "marginRight": 10,
                }
              }
            >
              •
            </Text>
            <Text
              style={
                {
                  "color": "#e2e8f0",
                  "flex": 1,
                  "fontSize": 15,
                  "lineHeight": 22,
                }
              }
            >
              Place phone in landscape on a stable surface
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginBottom": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#4299e1",
                  "fontSize": 18,
                  "lineHeight": 22,
                  "marginRight": 10,
                }
              }
            >
              •
            </Text>
            <Text
              style={
                {
                  "color": "#e2e8f0",
                  "flex": 1,
                  "fontSize": 15,
                  "lineHeight": 22,
                }
              }
            >
              Keep the full board in frame with some margin
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginBottom": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#4299e1",
                  "fontSize": 18,
                  "lineHeight": 22,
                  "marginRight": 10,
                }
              }
            >
              •
            </Text>
            <Text
              style={
                {
                  "color": "#e2e8f0",
                  "flex": 1,
                  "fontSize": 15,
                  "lineHeight": 22,
                }
              }
            >
              Avoid glare — indirect or diffused light is best
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginBottom": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#4299e1",
                  "fontSize": 18,
                  "lineHeight": 22,
                  "marginRight": 10,
                }
              }
            >
              •
            </Text>
            <Text
              style={
                {
                  "color": "#e2e8f0",
                  "flex": 1,
                  "fontSize": 15,
                  "lineHeight": 22,
                }
              }
            >
              White squares should face you (a1 bottom-left)
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
        "marginBottom": 24,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#2d3748",
            "borderRadius": 4,
            "height": 8,
            "width": 8,
          },
          {
            "backgroundColor": "#4299e1",
            "width": 20,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "backgroundColor": "#2d3748",
            "borderRadius": 4,
            "height": 8,
            "width": 8,
          },
          false,
        ]
      }
    />
    <View
      style={
        [
          {
            "backgroundColor": "#2d3748",
            "borderRadius": 4,
            "height": 8,
            "width": 8,
          },
          false,
        ]
      }
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 16,
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      style={
        {
          "minWidth": 80,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#4299e1",
          "borderRadius": 10,
          "opacity": 1,
          "paddingHorizontal": 32,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Continue →
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "center",
        "marginTop": -8,
        "opacity": 1,
        "paddingBottom": 24,
      }
    }
  >
    <Text
      style={
        {
          "color": "#718096",
          "fontSize": 14,
        }
      }
    >
      Skip
    </Text>
  </View>
</View>
`;
